--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
 
 } 
 
+@font-face {
+    font-family: 'googlesans_bold';
+    src: url('jono292.github.io/material-design-plus/resources/fonts/googlesans-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+} 
+
 
 
 body {
@@ -14,4 +22,9 @@ background: -webkit-linear-gradient(to right, #3F5EFB, #FC466B);  /* Chrome 10-2
 background: linear-gradient(to right, #3F5EFB, #FC466B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 color: #fff;
 font-family: "googlesans_regular";
+}
+
+.home-title {
+ padding-top: 10px;
+ padding-left: 5px;
 }
