--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'googlesans_regular';
-    src: url('jono292.github.io/material-design-plus/resources/fonts/googlesans-regular-webfont.woff') format('woff');
+    src: url('https://jono292.github.io/material-design-plus/resources/fonts/googlesans-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
