--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,8 @@ font-family: "googlesans_regular" !important;
 }
 
 .home-title {
- padding-top: 10px;
- padding-left: 5px;
+ padding-top: 10px !important;
+ padding-left: 5px !important;
 }
 
 .card {
@@ -45,13 +45,13 @@ font-family: "googlesans_regular" !important;
 }
 
 .mdp-card-title {
-    padding-left: 12px;
-    padding-top: 2px;
+    padding-left: 12px !important;
+    padding-top: 2px !important;
 }
 
 .mdp-card-body {
-    padding-left: 12px;
-    padding-top: 2px;
+    padding-left: 12px !important;
+    padding-top: 2px !important;
 }
 
 p {
